--- a/style.css
+++ b/style.css
@@ -1,12 +1,49 @@
-* {
-  padding: 0;
-  margin: 0;
-  border: 0;
+@import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
 
+body {
+    display: flex;
+    flex: 1;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+    font-family: 'Roboto', sans-serif;
 }
-#content {
-  background-color: blue;
-  align-self: center;
-  align-content: center;
-  align-items: center
+
+.container {
+    display: flex;
+    flex: 1;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    border-style: solid;
+    border-radius: 15px;
+    border-width: 1px;
+    padding: 50px;
+    width: 50%;
+    max-width: 500px;
+    margin-top: 8%;
+}
+
+p {
+    font-size: 16pt;
+}
+
+input[type=text] {
+    border-style: solid;
+    border-radius: 2px;
+    border-width: 1px;
+    background-color: #fcfcfcfc;
+    height: 35px;
+    font-size: 14pt;
+    padding-left: 5px;
+}
+
+input[type=button] {
+    border-style: solid;
+    border-radius: 2px;
+    border-width: 1px;
+    background-color: #fcfcfcfc;
+    width: 125px;
+    height: 35px;
 }
